@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype ortho
'left to right direction
skinparam classAttributeIconSize 0
hide circle
hide methods

class Vehicle {
    description
    atributes
    Brand
    Model
    Type
    Tare
    GrossWeight
    Current Km
    Register Date
    Acquisition Date
    Maintenance/Checkup
    Frequency (in Kms)
}

class List {
    plate number
    model
    brand
    current kms
}

class MaintenanceAgenda {
    frequency
    description
    vehicle
}

class Team {
    name
    members (collaborators)
}

class Skill {
    name
    description
    }

class Job {
    name
}

class User {
   name
   birthDate
   admissionDate
   address
   phoneNumber
   email
   taxPayerNumber
   idDocTypeNumber
   job
   skills
   task
   idType
}

class UserType {
    NameOfUserType
}

class GreenSpace{
    name
    type
    description
    area
    manager
    address
}

class Portal{
    name
    url address
    content
}

class Report{
    type
    date
    author
    content
}

class Address{
    street
    postalCode
    city
}

class Task {
    reference
    description
    status
    urgency
    expectedDuration
    greenSpace
}

class CheckUp {
    -description
}

class Agenda {
    diary
    entries
}

class ToDoListEntry {
    -task
}

class ToDoList {
    -entries
}

class AgendaEntry {
    -toDoListEntry
    -team
}
Team "1" -- "0..*" Task : executes >
Team "1" -- "0..*" Job : includes >
Team "1" --- "0..*" User: associated >
Team "1" -- "0..*" Skill : includes >
Team "1" --- "0..*" MaintenanceAgenda: follows >
Portal "1" --- "1" GreenSpace: made for >
Portal "1" -- "0..*" Report: has >
MaintenanceAgenda "1" -- "0..*" Vehicle : requires >
Vehicle"0..*" -- "1" CheckUp: assigned to >
Vehicle "0..*" - "1" List: assigned to >
Vehicle "1" -- "0..*" Equipment : transports >
Vehicle "1" -- "0..*" Machines : transports >
UserType "1" --- "1" User: identifies >
User "1" --- "1" Portal: uses >
User "1" --- "1" Address: lives in >
User "1" --- "1" Job: has >
Task "1" -- "0..*" Skill: requires >
Task "1" -- "0..*" Vehicle : requires >
GreenSpace "1" - "1" Address: located at >
Task "1" -- "0..*" ToDoList : exists in >
ToDoList "1" -- "0..*" ToDoListEntry : contains >
ToDoListEntry "1" -- "1" Task : contains >
ToDoListEntry "1" -- "1" AgendaEntry : exists in >
AgendaEntry "0..*" -- "1" Agenda : belongs to >
ToDoListEntry "0..*" -- "1" ToDoList : belongs to >
Team "1..*" - "1" Agenda: follows >
Team "1" -- "1" AgendaEntry : assigned with >
@enduml
